--- a/en/terms.html
+++ b/en/terms.html
@@ -45,8 +45,8 @@
 <div class="footer">
   <div class="container footer-grid">
     <div>
-      <div class="badge">Swiss institutional minimal • Scientific authority</div>
-      <div class="small" style="margin-top:10px;">© 2026 International Cigar Sommelier Institute (CSI). All rights reserved.</div>
+      <div class="badge">Swiss institutional • Scientific authority</div>
+      <div class="small" style="margin-top:10px;">© 2026 International Cigar Sommelier Institute (ICSI). All rights reserved.</div>
     </div>
     <div class="small">
       <a class="underline" href="/en/privacy.html">Privacy</a> &nbsp;·&nbsp;
